<resources>
    <string name="app_name">Mobiticket</string>
    <string name="contentdescription">TODO</string>
    <string name="welcome_to">Welcome to</string>
    <string name="log_in">Log In</string>
    <string name="text_done">Done</string>
    <string name="hint_email">Enter your email</string>
    <string name="text_phone">Phone: </string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="text_contact_information">Contact Information</string>
    <string name="lbl_email">Email:</string>
    <string name="text_login">Log In</string>
    <string name="text_login_credentials">Enter your password to log in</string>
    <string name="hint_password">Password</string>
    <string name="text_password">Password:</string>
    <string name="text_register">Register</string>
    <string name="text_register_details">Enter details to begin registration</string>
    <string name="lbl_national_id">National ID:</string>
    <string name="hint_national_id">Enter national ID number</string>
    <string name="text_yob">Year of birth:</string>
    <string name="hint_yob">Enter year of birth e.g. 1999</string>
    <string name="text_submit">Submit</string>
    <string name="lbl_firstname">First Name:</string>
    <string name="lbl_lastname">Last Name</string>
    <string name="lbl_gender">Gender</string>
    <string name="text_confirm">Confirm</string>
    <string name="lbl_middlename">Middle Name:</string>
    <string name="hint_phone_number">Enter phone number</string>
    <string name="lbl_phone_number">Phone: </string>
    <string name="lbl_password">Password:</string>
    <string name="lbl_confirm_password">Confirm Password:</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="verification">Verification</string>
    <string name="lbl_verification">A verification code will be sent to your phone shortly. Please wait....</string>
    <string name="txt_Resend">Resend?</string>
    <string name="txt_verify">Verify</string>
    <string name="short_lorem_ipsum">Shortest lorem ipsum</string>
    <string name="lbl_username">Username:</string>
    <string name="hint_username">Enter your username</string>
    <string name="home">Mobiticket</string>
    <string name="text__2">2</string>
    <string name="txt_view_all">View all</string>
    <string name="text_when_you_want_to_go">When you want to go?</string>
    <string name="txt_new_offers">New Offers</string>
    <string name="text_recent_search">Search buses from your recently visited routes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_from_city">"From "</string>
    <string name="hint_to_city">Destination</string>
    <string name="lbl_ac">Air Con</string>
    <string name="lbl_non_ac">Non AC</string>
    <string name="lbl_sleeper">Sleeper</string>
    <string name="lbl_seater">Seater</string>
    <string name="_1">1</string>
    <string name="lbl_profile_settings">My Profile</string>
    <string name="lbl__wallet">My Wallet</string>
    <string name="lbl_cards">Cards</string>
    <string name="lbl_operators">Operators</string>
    <string name="text_version_1_0">Version : 1.0</string>
    <string name="lbl_help_support"><![CDATA[Help & Support]]></string>
    <string name="text_settings">Settings</string>
    <string name="text_logout">Log Out</string>
    <string name="txtCancelled">Cancelled</string>
    <string name="text_booked">Booked</string>
    <string name="txt_popular_package">Popular Packages</string>
    <string name="text_trending_packages">Trending Packages</string>
    <string name="txt_new_package">New Packages</string>
    <string name="text_confirmation">Confirmation!</string>
    <string name="text_yes">Yes</string>
    <string name="msg_logout">Are you sure, you want to logout?</string>
    <string name="text_no">No</string>
    <string name="text_save">Save</string>
    <string name="profile_settings">Edit Profile</string>
    <string name="title_edit_your_name">Names</string>
    <string name="text_user_phone">0700101010</string>
    <string name="text_user_email">user@email.com</string>
    <string name="title_edit_your_contact">Edit Your Contact</string>
    <string name="hint_enter_last_name">Last Name:</string>
    <string name="hint_enter_first_name">First Name:</string>
    <string name="txt_user_name">First Name</string>
    <string name="msg_email_required">Email required</string>
    <string name="msg_email_valid">Enter Valid Email</string>
    <string name="msg_first_name">First name required</string>
    <string name="msg_last_name">Last name required</string>
    <string name="msg_mobile_number">Mobile number required</string>
    <string name="msg_email_id">Email Id required</string>
    <string name="msg_saved">Saved</string>
    <string name="update_your_residence_details">Update residence details</string>
    <string name="edit_your_residence">Edit your residence details</string>
    <string name="lbl_street_address">Street</string>
    <string name="lbl_city">City or Town:</string>
    <string name="lbl_country">Country</string>
    <string name="txt_residence_street">Residence street</string>
    <string name="title_change_password">Change your password</string>
    <string name="hint_change_password">Change password (optional)</string>
    <string name="hint_confirm_new_password">Confirm  new password</string>
    <string name="title_wallet">Wallet</string>
    <string name="lbl_your_wallet_in_balance">Your wallet balance:</string>
    <string name="_200">KES 200.00</string>
    <string name="lbl_wallet">Refer friends, Earn wallet money</string>
    <string name="lorem_ipsum">Rerem Ibsum</string>
    <string name="drive_vehicles_fragment">Vehicles you drive</string>
    <string name="title_vehicles">Vehicles</string>
    <string name="lbl_cbd">CBD</string>
    <string name="lbl_koja">Khoja</string>
    <string name="lbl_ngumba">Ngumba</string>
    <string name="lbl_ruiru">Ruiru</string>
    <string name="text_bus_list">Buses</string>
    <string name="title_price">Price</string>
    <string name="text_100">0</string>
    <string name="lbl_StarRatings">Star Ratings</string>
    <string name="txt_BusType">Bus Type</string>
    <string name="lbl_Apply">Apply</string>
    <string name="lbl_travelname">Mobiticket Travels</string>
    <string name="lbl_starttime1">06:00</string>
    <string name="lbl_endtime1">09:00</string>
    <string name="lbl_totalDuration">8:00</string>
    <string name="text_am">AM</string>
    <string name="text_pm">PM</string>
    <string name="lbl_hold">3</string>
    <string name="lbl_type1">Seater</string>
    <string name="lbl_type2">sleeper</string>
    <string name="lbl_price1">50</string>
    <string name="lbl_price2">100</string>
    <string name="text_addhold">%s Holds</string>
    <string name="text_add5">%d/5</string>
    <string name="lbl_fare">KES 0.00</string>
    <string name="lbl_total_fare">Total Fare</string>
    <string name="lbl_pnr_no">PNR No</string>
    <string name="txt_bustime">18:00</string>
    <string name="txt_time">8:00</string>
    <string name="txt_date">28-May-2019</string>
    <string name="integrity_intercity">Integrity Intercity</string>
    <string name="volvo_bus">Volvo</string>
    <string name="lbl_booking_endtime1">8:00</string>
    <string name="text_duration">Duration</string>
    <string name="title_passengerdetail">Passenger details</string>
    <string name="msg_code">Code required</string>
    <string name="txt_passenger">Passenger: </string>
    <string name="text_seat_no">Seat No</string>
    <string name="text_seat">Seat</string>
    <string name="hint_enter_name">Enter name</string>
    <string name="hint_enter_age">Enter age</string>
    <string name="msg_name">Enter name</string>
    <string name="ms_age">Enter age</string>
    <string name="lbl_intracity">Intracity</string>
    <string name="lbl_intercity">Intercity</string>
    <string name="lbl_railway">Railways</string>
    <string name="lbl_ferry">Ferry</string>
    <string name="text_select_number_of_seats">Number of seats required</string>
    <string name="where_to">Search your matatu or bus by typing name of your destination below:</string>
    <string name="payment_methods">Payment Metods</string>
    <string name="payment">Make payment</string>
    <string name="lbl_submit">Submit</string>
    <string name="RETRY">Retry</string>
    <string name="owner_travelling">Is account owner travelling?</string>
    <string name="lbl_tap_cards">Write Cards</string>
    <string name="write_nfc_card">Enter NFC card details</string>
    <string name="wallet_password">Password</string>
    <string name="hint_wallet_password">Jambopay wallet password</string>
    <string name="hint_wallet_username">Jambopay wallet username</string>
    <string name="lbl_card_type">Card Type:</string>
    <string name="bookings">My Tickets</string>
    <string name="action_search">Search</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="buses_array">
        <item>AC</item>
        <item>Non AC</item>
        <item>Normal</item>
    </string-array>
    <string name="title_activity_bookings">BookingsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_tickets">TicketsActivity</string>
    <string name="toolbar_title">My tickets</string>
    <string name="text_searched">Current search results</string>
    <string name="stops_on_route">Stops along this route</string>
    <string name="reference_number_or_phone">Enter phone or reference number to search ticket</string>
    <string name="middle_lorem_ipsum">Middle Lorem ipsum</string>
    <string name="medium_sacco_name">Sacco Name</string>
    <string name="partners">Partners</string>
    <string name="stakeholders">Stakeholders</string>
    <string name="title_activity_market_place">MarketPlaceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="no_expenses">No expenses to display for this vehicle</string>
    <string name="no_tickets">No tickets to display for this vehicle</string>
    <string name="no_charges">No charges to display for this vehicle</string>
    <string name="txt_please_wait">\n\nPlease wait.....\n\n</string>
    <string name="hint__seven_phone_number">e.g. 7XX XXX XXX</string>
    <string name="txt_search_bus">Already inside a bus? Enter its registration number below to pay fare</string>
    <string name="lbl_my_vehicles">My Vehicles</string>
    <string name="text_my_vehicles">My Vehicles</string>
    <string name="text_forgotten_password">Forgot password?</string>
    <string name="title_activity_more">More..</string>
    <string name="tell_your_friends">Tell your friends and family about mobiticket cashless fare service!</string>
    <string name="text_ticket_purchase_in_progress">Ticket purchase in progress</string>
    <string name="text_exit">Your ticket data will be lost. \n\n Do you want to exit anyway?</string>
</resources>