<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/app_background"
    tools:context=".activities.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@drawable/bg_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_toolbar"
        android:theme="@style/Toolbar"
        android:visibility="visible"
        app:contentInsetStart="0dp"
        app:titleTextColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:contentDescription="@string/contentdescription"
                android:padding="@dimen/spacing_medium"
                android:src="@drawable/ic_left_arrow_white" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_toEndOf="@+id/ivBack"
                android:fontFamily="@font/googlesansextrabold"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="@dimen/font_mlarge" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@drawable/bg_card">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_medium"
                    app:cardCornerRadius="@dimen/spacing_small"
                    app:cardElevation="@dimen/card_shadow">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/spacing_xsmall"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_xsmall"
                            android:orientation="horizontal">


                            <EditText
                                android:id="@+id/etPhoneNumber"
                                style="@style/App_EditTextStyle"
                                android:gravity="center"
                                android:hint="Enter your phone number"
                                android:inputType="phone"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_xsmall"
                            android:orientation="horizontal"
                            android:weightSum="6">

                            <EditText
                                android:id="@+id/etPassword"
                                style="@style/App_EditTextStyle"
                                android:gravity="center"
                                android:hint="Enter password"
                                android:inputType="textPassword"
                                android:textSize="16sp" />
                        </LinearLayout>


                        <Button
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="@dimen/spacing_small"
                            android:background="@drawable/bg_btn_shape"
                            android:fontFamily="@font/googlesansbold"
                            android:text="@string/text_login"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/font_large" />

                        <TextView
                            android:id="@+id/tvForgottenPassword"
                            style="@style/App_TextViewMedium"

                            android:layout_margin="@dimen/spacing_large"

                            android:clickable="true"
                            android:gravity="center"
                            android:text="@string/text_forgotten_password"
                            android:textColor="@color/orange_500"
                            android:textSize="@dimen/font_large" />


                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</RelativeLayout>